2003-07-09  Larry Ewing  <lewing@ximian.com>

	* htmlengine.c (html_engine_freeze):  only process the updates on
	the first freeze, and add some checking to call (to fix the other
	problem York pointed out on irc.)

2003-07-08  Larry Ewing  <lewing@ximian.com>

	* htmltextslave.c (draw_focus): substitute p with painter (Thanks
	to York for pointing it out).

	* htmlimage.c (draw_focus): subsitute p with painter.

	* htmlclueflow.c: remove draw_background.

	* htmldrawqueue.c: don't do any drawing directly, simply
	invalidate the regions, let the expose handler deal with the
	drawing.  Remove a lot of unused cruft and focus drawing code.
	
        * htmlengine.c: make all the draw queues invalidate the regions
	instead of drawing directly.

	* htmlengine.h: remove draw_focus_object, that is handled by the
	object's ::draw method now.

	* htmlframe.c: remove draw_background.

	* htmlframeset.c: remove draw_background.

	* htmliframe.c: remove draw_background.

	* htmlimage.c: rework animation timeout handling, make
	area_updated do something useful.

	* htmlobject.c: remove drawbackgound code.

	* htmlobject.h: add draw_focused boolean.

	* htmltable.c: remove ::draw_background logic that is no longer
	used.
	
	* htmltablecell.c: remove draw_background code that is no longer
	used.

	* htmltextslave.c (draw_focus): add a method to draw focus here.
	The drawing routine should be into the painter next.

2003-07-07  Yuedong Du  <yuedong.du@sun.com>

	* gtkhtml.c (add_bindings): remove keybinding for Control+Tab/
	Shift+Control+Tab, fix bug #45825

2003-06-27  Radek Doulik  <rodo@ximian.com>

	* gtkhtml.c (gtk_html_editor_event): initialize retval to NULL

2003-06-26  Radek Doulik  <rodo@ximian.com>

	* gtkhtml.c (button_press_event): fix coordinates
	(shift_to_iframe_parent): ditto

2003-06-24  Larry Ewing  <lewing@ximian.com>

	* htmlengine.c (parse_body): add helper functions to push/pop clue
	levels.
	(html_engine_finalize): unref the body background.  If the body